# UpsServer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  server_config.txt
cmake/module/: Doxygen.cmake  GetSpdlog.cmake  NoInSourceBuilds.cmake  Testing.cmake
doc/: .$server_architecture_v1.1.drawio.bkp  Game thread interface.drawio  User state diagram.drawio  server_FSM_graph_v1.1.drawio  server_architecture_v1.1.drawio
src/: CMakeLists.txt  main.cpp
src/config/: LoggerConfig.cpp  ServerConfig.cpp
src/game_logic/: CMakeLists.txt  ServerController.cpp  TcpGameServer.cpp
src/game_logic/game_room/: CMakeLists.txt  Game.cpp  GameGraph.cpp  RoomStructs.cpp
src/game_logic/game_room/include/: Game.h  GameGraph.h  RoomStructs.h
src/game_logic/game_server/: CMakeLists.txt  IdleUsersRoom.cpp  ServerController.cpp  TcpGameServer.cpp
src/game_logic/game_server/include/: IdleUsersRoom.h  ServerController.h  TcpGameServer.h
src/game_logic/include/: ServerController.h
src/game_logic/protocol/: BufferedParser.cpp  ProtocolClient.cpp  ProtocolData.cpp
src/game_logic/protocol/include/: BufferedParser.h  ProtocolClient.h  ProtocolData.h
src/game_server_logic/: CMakeLists.txt  IdleUsersRoom.cpp  ServerController.cpp  TcpGameServer.cpp
src/game_server_logic/game/: CMakeLists.txt  Game.cpp  RoomStructs.cpp
src/game_server_logic/game/include/: Game.h  RoomStructs.h
src/game_server_logic/include/: IdleUsersRoom.h  ServerController.h  TcpGameServer.h
src/game_server_logic/protocol/: BufferedParser.cpp  CMakeLists.txt  ProtocolClient.cpp  ProtocolData.cpp  main.cpp  serializer.cpp
src/game_server_logic/protocol/include/: BufferedParser.h  ProtocolClient.h  ProtocolData.h  serializer.h
src/linux_commons_lib/: CMakeLists.txt
src/network_commons_lib/: CMakeLists.txt
src/tcp_client/: CMakeLists.txt  ClientSocket.cpp
src/utils/: CMakeLists.txt
test/: CMakeLists.txt
test/game/: CMakeLists.txt  TestGraph.cpp  graphTestBase.h
test/manual_test/: server_test.py  test_requests.txt
test/parser/: CMakeLists.txt  testBaseParser.h  testParserExceptions.cpp  testParserOneMessage.cpp  testParserTwoMessages.cpp
test/server/: CMakeLists.txt  TestServerGame.cpp  TestServerOneClient.cpp  TestServerTwoClients.cpp  testBaseServer.h  testBaseServerGame.h  testBaseServerOneClient.h  testBaseServerTwoClients.h  testBasicServerFunctionality.cpp
(+50 files in other folders)
